添加遗物：幸运币

--- a/src/main/resources/Jaina/localization/ZHS/relics.json
+++ b/src/main/resources/Jaina/localization/ZHS/relics.json
@@ -3,7 +3,14 @@
     "NAME": "大法师之杖",
     "FLAVOR": "大法师的法力好像也不怎么样啊。",
     "DESCRIPTIONS": [
-      "在战斗开始时，将一张 #b 吉安娜 的卡牌置入你的手牌。"
+      "在战斗开始时，将一张 #b吉安娜 普通卡放入你的手牌。"
+    ]
+  },
+  "jaina:TheCoin": {
+    "NAME": "幸运币",
+    "FLAVOR": "它不一定能带来好运，但一定能给你一点小小的帮助！",
+    "DESCRIPTIONS": [
+      "将一张 #y幸运币 放入你的手牌。"
     ]
   }
 }
