--- a/src/main/resources/Jaina/localization/ZHS/ui.json
+++ b/src/main/resources/Jaina/localization/ZHS/ui.json
@@ -4,8 +4,7 @@
       "冻结",
       "该敌人被冻结了。",
       "这名敌人的意图不是 #r攻击。 ",
-      "选择一张牌",
-      "NL 消耗 。"
+      "选择一张牌"
     ]
   },
   "jaina:Fire": {
