--- a/src/main/resources/Jaina/localization/ZHS/ui.json
+++ b/src/main/resources/Jaina/localization/ZHS/ui.json
@@ -4,7 +4,8 @@
       "冻结",
       "该敌人被冻结了。",
       "这名敌人的意图不是 #r攻击。 ",
-      "选择一张牌"
+      "选择一张牌",
+      "不能 #y打出 更多的牌了！"
     ]
   },
   "jaina:Fire": {
