--- a/src/main/resources/Jaina/localization/ZHS/relics.json
+++ b/src/main/resources/Jaina/localization/ZHS/relics.json
@@ -3,28 +3,28 @@
     "NAME": "大法师之杖",
     "FLAVOR": "大法师的法力好像也不怎么样啊。",
     "DESCRIPTIONS": [
-      "在战斗开始时，将一张 #b吉安娜 普通卡放入你的手牌。"
+      "战斗开始时，将一张普通 #b法术牌 放入你的手牌。"
     ]
   },
   "jaina:TheCoin": {
     "NAME": "幸运币",
     "FLAVOR": "它不一定能带来好运，但一定能给你一点小小的帮助！",
     "DESCRIPTIONS": [
-      "每场战斗一次，将一张 #y幸运币 放入你的手牌。"
+      "每场战斗一次，将一张 #y幸运币 放入你的手牌。 NL （右键使用。）"
     ]
   },
   "jaina:SphereOfSapience": {
     "NAME": "感知宝珠",
     "FLAVOR": "那张牌也许会迟到，但从不缺席。",
     "DESCRIPTIONS": [
-      "每场战斗一次，预见 #b5 并抽一张牌。"
+      "每场战斗一次，预见 #b5 并抽一张牌。 NL （右键使用。）"
     ]
   },
   "jaina:RobesOfGaudiness": {
     "NAME": "华丽的长袍",
     "FLAVOR": "一件有诸多宝石镶嵌在里面的长袍，没有人能驾驭它的力量。",
     "DESCRIPTIONS": [
-      "你的 #b吉安娜 卡牌消耗为 #b0 。 NL 每回合只能使用 #b3 张牌。"
+      "你的 #b法术牌 消耗为 #b0 。 NL 每回合只能使用 #b3 张牌。"
     ]
   },
   "jaina:ArcaniteCrystal": {
@@ -38,7 +38,28 @@
     "NAME": "升格卷轴",
     "FLAVOR": "一个记载着古老文字的卷轴，使用它可能会造成不可预料的后果。",
     "DESCRIPTIONS": [
-      "消耗 #y2 点能量，将一张随机卡牌放入的你手牌，这张卡本回合耗能减少 #y2 。"
+      "消耗 #y2 点能量。 NL 将一张随机 #b法术牌 放入的你手牌，这张卡本回合耗能减少 #y2 。 NL （右键使用。）"
     ]
-}
+  },
+  "jaina:Aluneth": {
+    "NAME": "艾露尼斯",
+    "FLAVOR": "不可阻挡的奥术之力……却被困在这么小的空间里。",
+    "DESCRIPTIONS": [
+      "在你的回合结束时，抽 #b3 张牌。"
+    ]
+  },
+  "jaina:BookOfWonders": {
+    "NAME": "惊奇之书",
+    "FLAVOR": "有可能是惊奇……但也有可能是惊吓！",
+    "DESCRIPTIONS": [
+      "战斗开始时，将 #b5 张 #y惊奇卡牌 洗入你的抽牌堆中。"
+    ]
+  },
+  "jaina:RubySpellstone": {
+    "NAME": "法术红宝石",
+    "FLAVOR": "“最后一枚石头毁灭了它的主人，无名的法师破解了结界。阿扎里发出绝望的咆哮，被封入虚空，再也不见踪迹。”——《魔石》",
+    "DESCRIPTIONS": [
+      "每场战斗一次，将一张随机 #b法术牌 放入你的手牌。（右键使用。）"
+    ]
+  }
 }
