--- a/src/main/resources/Jaina/localization/ZHS/cards.json
+++ b/src/main/resources/Jaina/localization/ZHS/cards.json
@@ -324,7 +324,8 @@
     "UPGRADE_DESCRIPTION": "保留 。 固有 。 NL 这张牌在你的手中每回合开始都会变形成为一张随机法术牌。",
     "EXTENDED_DESCRIPTION": [
       "【变形】",
-      "保留 。 NL "
+      "保留 。 NL ",
+      "不能打出这张牌！"
     ]
   },
   "jaina:ShootingStar": {
