--- a/src/main/resources/Jaina/localization/ZHS/powers.json
+++ b/src/main/resources/Jaina/localization/ZHS/powers.json
@@ -2,29 +2,25 @@
   "jaina:ArcaneGatePower": {
     "NAME": "奥术之门",
     "DESCRIPTIONS": [
-      "使用 #p奥术 牌时造成 #b",
-      " 点伤害。"
+      "使用 #p奥术 牌时造成 #b%d 点伤害。"
     ]
   },
   "jaina:ArcticArmorPower": {
     "NAME": "寒甲术",
     "DESCRIPTIONS": [
-      "你每打出一张 #b冰霜 牌，获得 #b",
-      " 点 #y格挡 。"
+      "你每打出一张 #b冰霜 牌，获得 #b%d 点 #y格挡 。"
     ]
   },
   "jaina:BurningPower": {
     "NAME": "燃烧",
     "DESCRIPTIONS": [
-      "回合结束时失去 #r",
-      " 点生命值。"
+      "回合结束时失去 #r%d 点生命值。"
     ]
   },
   "jaina:EvocationPower": {
     "NAME": "法力唤醒",
     "DESCRIPTIONS": [
-      "每回合获得 #y法术伤害 + #b",
-      " 。"
+      "每回合获得 #y法术伤害 + #b%d 。"
     ]
   },
   "jaina:FlameWardPower": {
@@ -56,44 +52,38 @@
     "NAME": "咒术洪流",
     "DESCRIPTIONS": [
       "你在每回合打出的第一张法术牌耗能变为 #b0 。",
-      "你在每回合打出的前 #b",
-      " 张法术牌耗能变为 #b0 。"
+      "你在每回合打出的前 #b%d 张法术牌耗能变为 #b0 。"
     ]
   },
   "jaina:LoseSpellDamagePower": {
     "NAME": "临时法术伤害",
     "DESCRIPTIONS": [
-      "回合结束时 #y法术伤害 - #b",
-      " 。"
+      "回合结束时 #y法术伤害 - #b%d 。"
     ]
   },
   "jaina:ManaBindPower": {
     "NAME": "法术共鸣",
     "DESCRIPTIONS": [
       "你的下一张 #p奥术 牌打出两次。",
-      "你的下 #b",
-      " 张 #p奥术 牌打出两次。"
+      "你的下 #b%d 张 #p奥术 牌打出两次。"
     ]
   },
   "jaina:SpellDamagePower": {
     "NAME": "法术伤害",
     "DESCRIPTIONS": [
-      "#y法术伤害 + #b",
-      " 。"
+      "#y法术伤害 + #b%d 。"
     ]
   },
   "jaina:SplittingImagePower": {
     "NAME": "裂魂残像",
     "DESCRIPTIONS": [
-      "受到攻击之后获得 #b",
-      " 层 #y无实体 。"
+      "受到攻击之后获得 #b%d 层 #y无实体 。"
     ]
   },
   "jaina:VaporizePower": {
     "NAME": "蒸发",
     "DESCRIPTIONS": [
-      "在你受到攻击时对攻击者造成 #b",
-      " 点伤害。 NL 受到一次攻击仅触发一次。",
+      "在你受到攻击时对攻击者造成相同的伤害。 NL 受到一次攻击仅触发一次。",
       "蒸发+"
     ]
   },
@@ -108,8 +98,7 @@
   "jaina:WizardArmorPower": {
     "NAME": "法师护甲",
     "DESCRIPTIONS": [
-      "回合结束时获得 #b",
-      " 点 #y格挡 。"
+      "回合结束时获得 #b%d 点 #y格挡 。"
     ]
   }
 }
