--- a/src/main/resources/Jaina/localization/ZHS/potions.json
+++ b/src/main/resources/Jaina/localization/ZHS/potions.json
@@ -9,8 +9,7 @@
   "jaina:BottledArcaneMissiles": {
     "NAME": "奥术飞弹瓶",
     "DESCRIPTIONS": [
-      "将 #b",
-      " 张 #y强能奥术弹 加入你的手牌。"
+      "将 #b%d 张 #y强能奥术弹 加入你的手牌。"
     ]
   },
   "jaina:FirePotion": {
@@ -37,30 +36,25 @@
   "jaina:IllusionPotion": {
     "NAME": "幻象药水",
     "DESCRIPTIONS": [
-      "复制你抽牌堆里的 #b",
-      " 张牌放入你的手牌。这张牌具有 #y消耗 。"
+      "复制你抽牌堆里的 #b%d 张牌放入你的手牌。这张牌具有 #y消耗 。"
     ]
   },
   "jaina:SpellDamagePotion": {
     "NAME": "法术伤害药水",
     "DESCRIPTIONS": [
-      "#y法术伤害 + #b",
-      " 。"
+      "#y法术伤害 + #b%d 。"
     ]
   },
   "jaina:SpellInspirationPotion": {
     "NAME": "法术灵感药水",
     "DESCRIPTIONS": [
-      "#y法术伤害 + #b",
-      " 。你的回合结束时， #y法术伤害 - #b",
-      " 。"
+      "#y法术伤害 + #b%d 。你的回合结束时， #y法术伤害 - #b%d 。"
     ]
   },
   "jaina:VolcanicPotion": {
     "NAME": "火山药水",
     "DESCRIPTIONS": [
-      "给予所有敌人 #b",
-      " 层 #y燃烧 。"
+      "给予所有敌人 #b%d 层 #y燃烧 。"
     ]
   }
 }
